Updated with offline-setup tasks

--- a/infrastructure/offline-setup/setup-offline.yml
+++ b/infrastructure/offline-setup/setup-offline.yml
@@ -72,6 +72,7 @@
       delegate_to: "{{ target_hosts }}"
 
     - name: Move folder list to User Home on Target Host
+      become: true
       synchronize:
         src: "/tmp/{{ archive_target_folder_name }}/{{ item }}"
         dest: "~/{{ item }}"
