--- a/infrastructure/offline-setup/setup-offline.yml
+++ b/infrastructure/offline-setup/setup-offline.yml
@@ -73,15 +73,10 @@
 
     - name: Move folder list to User Home on Target Host
       become: true
-      synchronize:
+      copy:
         src: "/tmp/{{ archive_target_folder_name }}/{{ item }}"
         dest: "~/{{ item }}"
-        dirs: yes
-        verify_host: no
-        set_remote_user: no
-        use_ssh_args: no
-        rsync_opts:
-          - "--remove-source-files"
+        remote_src: no
       delegate_to: "{{ target_hosts }}"
       with_items:
           - ".ansible"
