--- a/infrastructure/offline-setup/setup-offline.yml
+++ b/infrastructure/offline-setup/setup-offline.yml
@@ -76,7 +76,7 @@
       copy:
         src: "/tmp/{{ archive_target_folder_name }}/{{ item }}"
         dest: "~/{{ item }}"
-        remote_src: no
+        remote_src: yes
       delegate_to: "{{ target_hosts }}"
       with_items:
           - ".ansible"
