--- a/infrastructure/offline-setup/setup-offline.yml
+++ b/infrastructure/offline-setup/setup-offline.yml
@@ -64,21 +64,35 @@
         src: "{{ archive_folder }}.tar.gz"
       delegate_to: "{{ target_hosts }}"
 
-    - name: Verify that rsync is installed on Target Host
-      become: true
-      package:
-        name: "rsync"
-        state: present
-      delegate_to: "{{ target_hosts }}"
+#    - name: Move folder list to User Home on Target Host
+#      become: true
+#      command: "mv /tmp/{{ archive_target_folder_name }}/{{ item }} ~"
+#      delegate_to: "{{ target_hosts }}"
+#      with_items:
+#          - ".ansible"
+#          - ".apigee"
+#          - ".apigee-secure"
 
-    - name: Move folder list to User Home on Target Host
-      become: true
-      command: "mv /tmp/{{ archive_target_folder_name }}/{{ item }} ~"
+    - name: Obtain list of files to move to User Home on Target Hosts
+      find:
+        path: '/tmp/{{ archive_target_folder_name }}/{{ item }}'
+        pattern: '*'
+        file_type: file
+        hidden: yes
+        recurse: yes
       delegate_to: "{{ target_hosts }}"
       with_items:
-          - ".ansible"
-          - ".apigee"
-          - ".apigee-secure"
+        - ".ansible"
+        - ".apigee"
+        - ".apigee-secure"
+      register: downloads
 
-
+    - name: Download files
+      copy:
+        src: "{{ item.1.path }}"
+        dest: "~"
+        remote_src: yes
+      with_subelements:
+        - "{{ downloads.results }}"
+        - files
 
