--- a/infrastructure/offline-setup/setup-offline.yml
+++ b/infrastructure/offline-setup/setup-offline.yml
@@ -64,6 +64,7 @@
           - ".ansible"
           - ".apigee"
           - ".apigee-secure"
+          - "{{ archive_target_folder_name }}"
 
 #    - name: Obtain list of files to move to User Home on Target Hosts
 #      find:
