Updated with offline-setup tasks

--- a/infrastructure/offline-setup/setup-offline.yml
+++ b/infrastructure/offline-setup/setup-offline.yml
@@ -65,7 +65,7 @@
           - ".ansible"
           - ".apigee"
           - ".apigee-secure"
-          - "{{ repo_name }}/{{ archive_target_folder_name }}"
+          - "{{ repo_name }}"
 
 #    - name: Obtain list of files to move to User Home on Target Hosts
 #      find:
