--- a/infrastructure/offline-setup/setup-offline.yml
+++ b/infrastructure/offline-setup/setup-offline.yml
@@ -60,7 +60,7 @@
       command: "mv /tmp/{{ archive_target_folder_name }}/{{ item }} ~"
       delegate_to: "{{ target_hosts }}"
       with_items:
-          - ".ansible"
+#          - ".ansible"
           - ".apigee"
           - ".apigee-secure"
 
