--- a/infrastructure/offline-setup/setup-offline.yml
+++ b/infrastructure/offline-setup/setup-offline.yml
@@ -63,6 +63,7 @@
 #          - ".ansible"
           - ".apigee"
           - ".apigee-secure"
+          - "{{ repo_name }}"
 
 #    - name: Obtain list of files to move to User Home on Target Hosts
 #      find:
