--- a/infrastructure/offline-setup/setup-offline.yml
+++ b/infrastructure/offline-setup/setup-offline.yml
@@ -67,7 +67,7 @@
       ignore_errors: true
       synchronize:
         src: "/tmp/{{ archive_target_folder_name }}/{{ item }}"
-        dest: "~"
+        dest: "file://"
       delegate_to: "{{ target_hosts }}"
       with_items:
           - ".ansible"
