--- a/infrastructure/offline-setup/setup-offline.yml
+++ b/infrastructure/offline-setup/setup-offline.yml
@@ -63,50 +63,12 @@
         name: "rsync"
         state: present
 
-#    - name: Synchronize folder list to User Home on Target Host
-#      become: true
-#      synchronize:
-#        src: "/tmp/{{ archive_target_folder_name }}/{{ item }}"
-#        dest: "{{ HOME | expandvars }}"
-#      delegate_to: "{{ target_hosts }}"
-#      with_items:
-#          - ".ansible"
-#          - ".apigee"
-#          - ".apigee-secure"
-#          - "{{ repo_name }}"
-
     - name: Synchronize folder list to User Home on Target Host
-      ignore_errors: true
-#      command: "mv /tmp/{{ archive_target_folder_name }}/{{ item }} ~"
-      command: "rsync -avzh /tmp/{{ archive_target_folder_name }}/{{ item }} {{ ~ | expanduser }}"
+      command: "rsync -avzh /tmp/{{ archive_target_folder_name }}/{{ item }} ~"
       delegate_to: "{{ target_hosts }}"
       with_items:
           - ".ansible"
           - ".apigee"
           - ".apigee-secure"
           - "{{ repo_name }}"
-
-#    - name: Obtain list of files to move to User Home on Target Hosts
-#      find:
-#        path: '/tmp/{{ archive_target_folder_name }}/{{ item }}'
-#        pattern: '*'
-#        file_type: file
-#        hidden: yes
-#        recurse: yes
-#      delegate_to: "{{ target_hosts }}"
-#      with_items:
-#        - ".ansible"
-#        - ".apigee"
-#        - ".apigee-secure"
-#      register: downloads
-#
-#    - name: Download files
-#      become: true
-#      copy:
-#        src: "{{ item.1.path }}"
-#        dest: "~"
-#        remote_src: yes
-#      with_subelements:
-#        - "{{ downloads.results }}"
-#        - files
 
