--- a/infrastructure/offline-setup/setup-offline.yml
+++ b/infrastructure/offline-setup/setup-offline.yml
@@ -64,7 +64,7 @@
         state: present
 
     - name: Synchronize folder list to User Home on Target Host
-      command: "rsync -avzh --remove-source-files /tmp/{{ archive_target_folder_name }}/{{ item }} ~"
+      command: "rsync -avzh --remove-source-files --partial /tmp/{{ archive_target_folder_name }}/{{ item }} ~"
       delegate_to: "{{ target_hosts }}"
       with_items:
           - ".ansible"
