Updated with offline-setup tasks

--- a/infrastructure/offline-setup/setup-offline.yml
+++ b/infrastructure/offline-setup/setup-offline.yml
@@ -1,6 +1,8 @@
 ---
 - name: Setup Accelerator Offline
   hosts: localhost
+  gather_vars: no
+
   vars:
     # Use this endpoint to clone github.com using HTTPS
     repository_secure_endpoint_https: "https://github.com/carlosfrias"
