Updated with offline-setup tasks

--- a/setup/configure-ssh-login/configure-ssh-user.yml
+++ b/setup/configure-ssh-login/configure-ssh-user.yml
@@ -1,6 +1,6 @@
 ---
 - name: Configure SSH for a remote user
-  hosts: '{{ hosts }}'
+  hosts: '{{ target_hosts }}'
 
   vars:
     pubkey: '~/.ssh/id_rsa.pub'
