Updated with offline-setup tasks

--- a/setup/configure-ssh-login/configure-ssh-user.yml
+++ b/setup/configure-ssh-login/configure-ssh-user.yml
@@ -1,6 +1,7 @@
 ---
 - name: Configure SSH for a remote user
   hosts: '{{ target_hosts }}'
+  gather_facts: no
 
   vars:
     pubkey: '~/.ssh/id_rsa.pub'
