--- a/infrastructure/offline-setup/setup-offline.yml
+++ b/infrastructure/offline-setup/setup-offline.yml
@@ -13,6 +13,7 @@
       - "../../installations/multi-node/requirements.yml"
       - "../../installations/devportal/requirements.yml"
       - "../../installations/mirror/requirements.yml"
+      - "../../post-installations/validations/analytics/requirements.yml"
     local_apigee_path: ~/.apigee
     local_apigee_secure_path: ~/.apigee-secure
     folder_list_to_archive:
