--- a/installations/mirror/create-archive.yml
+++ b/installations/mirror/create-archive.yml
@@ -30,6 +30,6 @@
   - { role: apigee-opdk-setup-bootstrap, tags: ['apigee-bootstrap', 'bootstrap'] }
   - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-component-install, component: 'apigee-mirror' }
-  - { role: apigee-opdk-setup-bootstrap-create-archive, tags: ['bootstrap', 'create'] }
+  - { role: apigee-opdk-setup-bootstrap-create-archive, tags: ['create'] }
 
 
